# rust-jupyter-client

./: .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  notes.md  run_kernel.sh  send_message.py
examples/: comm_info.rs  completion.rs  fetch_kernel_info.rs  heartbeat.rs  history.rs  inspect.rs  iopub_subscribe.rs  kernel_info.rs  run_code.rs  shutdown.rs
examples-old/: fetch_kernel_info.rs  subscribe_kernel_pubsub.rs
old/src/: errors.rs  response.rs  socket.rs
old/src-old/: signatures.rs
src/: client.rs  commands.rs  connection_config.rs  header.rs  lib.rs  paths.rs  responses.rs  signatures.rs  socket.rs  wire.rs
