[package]
name = "jupyter_client"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]

[dependencies]
zmq = "0.8.2"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
uuid = { version = "0.7.1", features = ["v4"] }
hmac = "0.7.0"
sha2 = "0.8.0"
hex = "0.3.2"
log = "0.4.6"
failure = "0.1.3"

[dev-dependencies]
structopt = "0.2.13"
env_logger = "0.5.13"
